--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,26 @@
     font-weight: 200;
 }
 
+.font-about {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 200;
+    font-size: .85em;
+}
+
 .font-semibold {
     font-family: "Titillium Web", sans-serif;
     font-weight: 600;
+}
+
+.font-semibold {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 600;
+}
+
+.font-main {
+  text-align: right;  
+  margin-right: 180px;
+
 }
 
 .font-light {
@@ -37,18 +54,13 @@ body {
     -webkit-font-smoothing: antialiased !important;
 }
 
-
+/* NAVBAR */
 .navbar {
     background-color: #e4e6e5;
     background-color: rgba( 228, 230, 229, .85 );
     border-bottom: 0 none;
-    font-size: 12px;
+    font-size: 1.25em;
     transition: .25s all linear;
-}
-
-.navbar.inv {
-    background-color: rgba( 0, 0, 0, .5 );
-    border-bottom: 1px solid #bfbfbf;
 }
 
 .navbar .nav a {
@@ -69,6 +81,7 @@ body {
 
 .nav li {
     text-align: center;
+    vertical-align: middle;
     white-space: nowrap;
 }
 
@@ -80,19 +93,6 @@ body {
 
 .navbar-brand {
     padding: 8px;
-}
-
-.active-menu {
-    background-color: #4e4e4e;
-    content: '.';
-    display: block;
-    height: 5px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    transition: all .5 linear;
-    width: 1%;
-    z-index: 9;
 }
 
 .inv .active-menu {
@@ -152,6 +152,7 @@ body {
         .navbar {
                 background-color: #e4e6e5 !important;
                 padding: 0;
+                font-size: .5em;
         }
         
         .navbar .nav a {
@@ -230,47 +231,47 @@ body {
 }
 
 #yellowtail {
-    font-family: 'Yellowtail', cursive;
+  font-family: 'Yellowtail', cursive;
 }
 
 #slide-1 h1 {
-        padding-top: 70px;
-        font-family: 'Yellowtail', cursive;
+  padding-top: 70px;
+  font-family: 'Yellowtail', cursive;
 }
 
 
 #home-row-1,
 #home-row-2 {
-        padding-top: 25px;
+  padding-top: 25px;
 }
 
 #home-row-1 h1 {
-        font-size: 150px;
+  font-size: 150px;
 }
 
 #home-row-1 h4 {
-        font-size: 32px;
+  font-size: 32px;
 }
 
 #home-row-2 {
-        font-size: 25px;
+  font-size: 25px;
 }
 
 #home-row-2 .col-12 {
-        height: 232px;
-        padding-top: 30px;
+  height: 232px;
+  padding-top: 30px;
 }
 
 #home-row-2 .col-12 .home-hover {
-        height: 166px;
-        overflow: hidden;
-        padding-top: 26px;
-        transition: all ease-in .5s;
+  height: 166px;
+  overflow: hidden;
+  padding-top: 26px;
+  transition: all ease-in .5s;
 }
 
 #home-row-2 .col-12 .home-hover:hover {
-        height: 166px;
-        padding-top: 0;
+  height: 166px;
+  padding-top: 0;
 }
 
 @media (max-width: 767px) {
@@ -415,6 +416,16 @@ i {
     background-color: #34495e;
     color: #e4e6e5;
     padding-top: 90px;
+}
+
+#slide-4 h3 {
+  font-size: .8em;
+  text-align: left;
+}
+
+#slide-4 p {
+  font-size: .6em;
+  text-align: left;
 }
 
 #slide-4 i {
