--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,8 @@ i {
 }
         
         #contact-row-4 {
-                padding-top: 125px;
+                /*padding-top: 125px;*/
+               /*padding-top: 0px;*/
         }
         
         #contact-row-4 .col-12 {
