--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Main font styles */
 .font-thin {
   font-family: "Titillium Web", Arial, Helvetica, sans-serif;
   font-weight: 200;
@@ -44,16 +45,17 @@
 }
 
 html, body {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    background-color: #355C7D;
-    font-weight: normal;
-    overflow-x: hidden;
-    -webkit-font-smoothing: antialiased !important;
+  background-color: #355C7D;
+  font-weight: normal;
+  overflow-x: hidden;
+  -webkit-font-smoothing: antialiased !important;
 }
+
 
 .hr {
   color: #f67280;
@@ -224,7 +226,7 @@ body {
 }
 
 #slide-1 {
-  background-image: url('../images/test2.png');
+  background-image: url('../images/introbackground.png');
   font-family: 'Yellowtail', cursive;
   color: #E0E0E0;
   -webkit-background-size: 100%;
@@ -316,12 +318,12 @@ body {
 
 }
 
-@media (max-width: 400px) {
-  #home-row-1 {
-    padding-top: 40px;
-  }
+@media (max-width: 480px) {
   #home-row-2 {
     padding-top: 10px;
+  }
+  #home-row-1 { 
+    padding-top: 90px;
   }
   
   #home-row-1 h1 {
