Updating responsiveness for new footer section

--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,18 @@
   font-family: "Titillium Web", Arial, Helvetica, sans-serif;
   font-weight: 600;
 }
+.font-main {
+  text-align: right;  
+  margin-right: 150px;
+}
 .font-light {
   font-family: "Titillium Web", Arial, Helvetica, sans-serif;
   font-weight: 300;
 }
-#yellowtail {
+.font-date {
   font-family: 'Yellowtail', cursive;
+  font-weight: 300;
+  color: #f8b195;
 }
 
 .header {
@@ -69,7 +75,7 @@ body {
   text-align: center;
   color: #6c5b7b;
   font-family: "Titillium Web", Arial, Helvetica, sans-serif;
-  font-weight: 500;
+  font-weight: 600;
   transition: all .5 linear;
 }
 
@@ -88,21 +94,22 @@ body {
 }
 
 @media(min-width:768px) {
-  .navbar-custom {
-    padding: 10px 0;
-    border-bottom: 0;
-    letter-spacing: 1px;
-    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-    transition: background .5s ease-in-out,padding .5s ease-in-out;
-  }
+    .navbar-custom {
+        padding: 10px 0;
+        border-bottom: 0;
+        letter-spacing: 1px;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
 
-  .navbar-custom.top-nav-collapse {
-    padding: 0;
-    border-bottom: 1px solid rgba(255,255,255,.3);
-    background: #000;
-  }
+    .navbar-custom.top-nav-collapse {
+        padding: 0;
+        border-bottom: 1px solid rgba(255,255,255,.3);
+        background: #000;
+    }
 }
+
 
 :focus {outline:none;}
 ::-moz-focus-inner {border:0;}
@@ -122,15 +129,19 @@ body {
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
-  background-size: cover;
+  background-size: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   width: 100%;
-  height: 100%;
+  height: auto;
   bottom: 0px;
-  display: table;
+  display: block;
+}
+
+#yellowtail {
+  font-family: 'Yellowtail', cursive;
 }
 
 #slide-1 h1 {
@@ -138,7 +149,7 @@ body {
 }
 
 #home-row-1 {
-  padding-top: 160px;
+  padding-top: 190px;
 }
 
 #home-row-1 h1 {
@@ -199,6 +210,9 @@ body {
   #home-row-1 {
     padding-top: 100px;
   }
+  .footer-left {
+    padding-top: 15px;
+  }
 }
 
 #slide-2{
@@ -218,28 +232,29 @@ body {
 }
 
 .btn-default {
-  border: 1px solid #c06c84;
-  color: #355c7d;
-  background-color: #e0e0e0;
+    border: 1px solid #c06c84;
+    color: #355c7d;
+    background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-  background-color: #355c7d;
-  border: 1px solid #f67280;
-  opacity: .6;
-  outline: 0;
-  color: #fff;
+    background-color: #355c7d;
+    border: 1px solid #f67280;
+    opacity: .6;
+    outline: 0;
+    color: #fff;
 }
 
 .btn-xl {
-  color: #f67280;
+  color: #fff;
   font-family: 'Courier New', Courier;
   font-weight: 200;
   text-transform: uppercase;
   padding: 5px;
   padding-left: 10px;
   padding-right: 10px;
+
   padding: 18px 28px;
   font-size: 22px;
   line-height: normal;
@@ -443,13 +458,6 @@ i {
   padding-bottom: 0px;
 }
 
-#slide-7 img {
-  margin-top: 15px;
-  padding: 15px 16px;
-  max-height: auto;
-  max-width: 100%;
-}
-
 #slide-7 .btn-circle {
   background-color: #f67280;
   border: 2px solid #c06c84;
@@ -461,24 +469,13 @@ i {
   padding-bottom: 0px;
 }
 
-#slide-7 .contact{
-  list-style-type: none;
-  font-size: .75em;
+.footer-right {
+  font-size: .4em;
   text-align: right;
 }
 
-#slide-7 a {
-  color: #355c7d;
-}
-
-#slide-7 a:hover,
-#slide-6 a:focus {
-  color: #f67280;
-  text-decoration: none;
-}
-
-.footer {
-  padding-top: 15px;
+.footer-right li {
+  list-style-type: none;
 }
 
 .title-row {
@@ -512,9 +509,12 @@ i {
   }
   
   .subtitle-row {
-    font-size: 26px;
+   right font-size: 26px;
     padding-bottom: 26px;
     padding-top: 26px;
+  }
+  .footer {
+    padding-right: 15px;
   }
 }
 
@@ -590,25 +590,4 @@ i {
         -moz-transform: scale(1);
         transform: scale(1);
     }
-}
-
-@-moz-document url-prefix() {  
-    img{
-        width: 100%;
-        max-width: 100%;
-    }
-}
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {    
-     img{
-        max-width: 100%;
-    }    
-}
-
-@media (min-width: 1500px) {
-  #home-row-2{
-  }
-  #home-row-1 {
-    margin-top: 150px;
-  }
 }
