--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
   font-size: 1.25em;
   transition: .25s all linear;
   text-align: center;
+  box-shadow: 0px 3px 6px 3px rgba(0,0,0,0.06);
 }
 
 .navbar-custom .navbar-nav {
@@ -113,6 +114,7 @@ body {
   padding-bottom: 25px;
   padding-top: 25px;
   text-align: center;
+  box-shadow: 15px 3px 15px 15px rgba(0,0,0,0.06);
 }
 
 #slide-1 {
@@ -137,6 +139,12 @@ body {
   font-family: 'Yellowtail', cursive;
 }
 
+#slide-1 img {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80%;
+}
+
 #home-row-1 {
   padding-top: 160px;
 }
@@ -147,6 +155,10 @@ body {
 
 #home-row-1 h4 {
   font-size: 32px;
+}
+
+#home-row-2 {
+
 }
 
 .schedule {
@@ -218,7 +230,7 @@ body {
 }
 
 .btn-default {
-  border: 1px solid #c06c84;
+  border: 1px solid #f67280;
   color: #355c7d;
   background-color: #e0e0e0;
 }
@@ -233,19 +245,23 @@ body {
 }
 
 .btn-xl {
-  color: #f67280;
-  font-family: 'Courier New', Courier;
+  color: #fff;
+  background-color: #f67280;
+  font-family: "Roboto";
   font-weight: 200;
   text-transform: uppercase;
-  padding: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding: 18px 28px;
+  padding: 13px;
+  padding-left: 60px;
+  padding-right: 60px;
   font-size: 22px;
   line-height: normal;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  border-radius: 8px;
+}
+
+.btn-xl:hover,
+.btn-xl:focus {
+  background-color: #f8b195;
+  border: 1px solid #f8b195;
+  font-color: #fff;
 }
 
 .btn-xl i {
