--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 /******************************************************************************
   RowdyHacks Website CSS                                        March 12, 2016
   Copyright ACM UTSA Student Chapter
-  Written by: Kurt King
-  Contributions: Bryan Deloeste, Kristin Mendoza
+  Contributions: Kurt King, Bryan Deloeste, Kristin Mendoza
                 
   Color Scheme (Layout/Font)
     #f8b195
@@ -78,45 +77,164 @@ body {
   width: 33%;
 }
 
-/* NAVBAR 
-*/
-.navbar-custom {
+/* Common styles for all menus */
+.menu {
+  line-height: 1;
+  margin: 0 auto 3em;
   background-color: #e4e6e5;
-  border-bottom: 0 none;
-  font-size: 1.25em;
-  transition: .25s all linear;
-  text-align: center;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
   box-shadow: 0px 3px 6px 3px rgba(0,0,0,0.06);
+  font-family: "Titillium Web", Arial, Helvetica, sans-serif;
 }
-.navbar-custom .navbar-nav {
-  display: inline-block;
-  float: none;
+
+.menu__list {
+  position: relative;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
   vertical-align: middle;
 }
-.navbar-custom .nav a {
+
+.menu__item {
+  display: block;
+  margin: 1em 0;
+}
+
+.menu__link {
+  font-size: 1.05em;
+  font-weight: bold;
+  display: inline-block;
+  padding: 1em;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.menu__link:hover,
+.menu__link:focus {
+  outline: none;
+  text-decoration: none;
+}
+
+/* Viola */
+.menu--viola .menu__item {
+  position: relative;
+  margin: 0 1em;
+  margin-bottom: 10px;
+}
+
+.menu--viola .menu__link {
+  position: relative;
+  display: block;
   text-align: center;
   color: #6c5b7b;
-  font-family: "Titillium Web", Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  transition: all .5 linear;
+  -webkit-transition: color 0.4s;
+  transition: color 0.4s;
 }
-.nav li {
-  text-align: center;
-  vertical-align: middle;
-  white-space: nowrap;
-}
-.nav > li > a:hover,
-.nav > li > a:focus {
+
+.menu--viola .menu__link:hover,
+.menu--viola .menu__link:focus {
   color: #f67280;
-  text-align: center;
-  background-color: inherit;
-  outline: none;
+}
+
+.menu--viola .menu__item--current .menu__link {
+  color: #f67280;
+}
+
+.menu--viola .menu__item::before,
+.menu--viola .menu__item::after,
+.menu--viola .menu__link::before,
+.menu--viola .menu__link::after {
+  content: '';
+  position: absolute;
+  background: #f67280;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+}
+
+.menu--viola .menu__item::before,
+.menu--viola .menu__item::after {
+  top: 0;
+  width: 2px;
+  height: 100%;
+  -webkit-transform: scale3d(1, 0, 1);
+  transform: scale3d(1, 0, 1);
+}
+
+.menu--viola .menu__item::before {
+  left: 0;
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+}
+
+.menu--viola .menu__item::after {
+  right: 0;
+  -webkit-transform-origin: 50% 0%;
+  transform-origin: 50% 0%;
+}
+
+.menu--viola .menu__link::before,
+.menu--viola .menu__link::after {
+  left: 0;
+  width: 100%;
+  height: 2px;
+  -webkit-transform: scale3d(0, 1, 1);
+  transform: scale3d(0, 1, 1);
+}
+
+.menu--viola .menu__link::before {
+  top: 0;
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+}
+
+.menu--viola .menu__link::after {
+  bottom: 0;
+  -webkit-transform-origin: 100% 50%;
+  transform-origin: 100% 50%;
+}
+
+.menu--viola .menu__item--current::before,
+.menu--viola .menu__item--current::after,
+.menu--viola .menu__item--current .menu__link::before,
+.menu--viola .menu__item--current .menu__link::after {
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
 }
 
 /* Mobile navbar icon
 */
 .fa-bars {
   color: #000;
+}
+
+.navbar-header {
+  display: block;
+  text-align: right;
+  float: right;
+  width: 100%;
+  vertical-align: middle;
+  margin-bottom: 10px;
 }
 
 /* Controls the growth of the bar icon when in mobile view 
@@ -167,11 +285,11 @@ body {
   transform: scale(1.3) translateZ(0);
 }
 
-/* Controls the navbar to expand at full screen view
+/* Controls the menu bar to expand at full screen view
 */
-@media(min-width:768px) {
-  .navbar-custom {
-      padding: 10px 0;
+@media(min-width:567px) {
+  .menu__list{
+      padding: 12px 0;
       border-bottom: 0;
       letter-spacing: 1px;
       -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
@@ -180,6 +298,13 @@ body {
   }
 }
 
+/* Stack items for smaller screens */
+@media screen and (max-width:47em) {
+  .menu__list {
+    display: block;
+    margin: 0 auto;
+  }
+}
 
 :focus {outline:none;}
 ::-moz-focus-inner {border:0;}
@@ -444,12 +569,6 @@ i {
 #slide-6 {
   background-color: #355c7d;
   color: #355C7D;
-  padding-top: 90px;
-}
-
-#slide-6 {
-  background-color:#6c5b7b;
-  color: #e4e6e5;
   padding-top: 90px;
 }
 
