--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,11 @@ body {
       transition: background .5s ease-in-out,padding .5s ease-in-out;
   }
 }
+@media(min-width: 800px) {
+  .menu__link {
+    box-shadow: 0px 3px 6px 3px rgba(0,0,0,0.06);
+  }
+}
 
 /* Stack items for smaller screens */
 @media screen and (max-width:47em) {
